manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: python-app
    type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30000
