manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  labels:
    name: python-app
spec:
  rules:
  - host: <domain>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-app
            port: 
              number: 80
